# poke-api-stadium

./: .gitignore  404.html  CLAUDE.md  README.md  compose.yaml  index.html  workspace.code-workspace
.claude/: settings.json
.claude/commands/: new-mini-game.md
.claude/rules/: hono-guide.md  python-guide.md  svelte-guide.md  typescript-guide.md
app/: version.json
app/immutable/assets/: 0.5Y7Gi8r0.css  0.AsW9ul4L.css  0.B5EuuudD.css  0.B7vLEZO3.css  0.B8R2ANHi.css  0.BQXALCi_.css  0.BR3yl7JC.css  0.BViVcHBo.css  0.BWOjtdmd.css  0.BWfH_ys0.css  0.BYJOH9nm.css  0.BZFmm9S3.css  0.B_XjVlqb.css  0.B_ykqHeH.css  0.BcQCdkXH.css  0.Bd-uBmYQ.css  0.BfJtZaUi.css  0.BoTVu3AT.css  0.BtYwv_76.css  0.Bx9RBzTg.css  0.BxC3YT-b.css  0.C1RMcmIE.css  0.C7VMtGSQ.css  0.CDrz0bPY.css  0.CK21d0bE.css  0.CP6g7uCr.css  0.CX3sJhIt.css  0.CXBjkpM6.css  0.C_o3xmHM.css  0.CbuBlxGf.css  0.CcV23_rv.css  0.Cd2TkIYf.css  0.CfsEwjiC.css  0.CiEIjeqQ.css  0.CizBt3Ar.css  0.CjucKvBL.css  0.Cmboz6ZG.css  0.CnJx2z-x.css  0.Cpkc3Yeu.css  0.CvG9Xif7.css  (+113 more)
app/immutable/chunks/: -xlmRmNQ.js  0027fUZl.js  05UAb5Pw.js  0AXnO5pm.js  0CVkNkar.js  0K_9O94U.js  0TfqrGUg.js  0ehdIhtd.js  0gTpiGuW.js  0gZ5_zFC.js  1IyxEvnE.js  1JAZlyX7.js  1KwdOsnL.js  1PPGoelj.js  1_Uywjwu.js  2EjHO40D.js  2UuoyBKo.js  2ZhUH04F.js  2qyFuzyC.js  31lAqChV.js  3pLTKXan.js  4LwLcaZe.js  57VS5Omx.js  61mlnKjW.js  6eXQMkwb.js  6eyfAU1V.js  7xl-T3lN.js  86H6aC2h.js  877cQOSd.js  8Ic5O_4V.js  8KlD2nIY.js  8xlynMNR.js  9G-EV2Wr.js  AEEMy1Aw.js  AF7iMiii.js  AQ9aI0Sc.js  AUQUKEK_.js  B-0zH4Ta.js  B-FPf4CZ.js  (+1684 more)
apps/fast-api-server/: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml  wrangler.toml
apps/fast-api-server/src/: main.py  settings.py
apps/fast-api-server/src/middleware/: auth.py
apps/fast-api-server/src/prompts/: system_prompts.py
apps/fast-api-server/src/routes/: auth.py  chat.py  health.py
apps/fast-api-server/src/schemas/: chat.py
apps/fast-api-server/src/services/gateway/: claude.py  gemini.py  groq.py  protcol.py  stub.py
apps/fast-api-server/tests/: conftest.py  test_auth.py  test_chat.py  test_gateways.py  test_health.py
apps/hono-server/: .gitignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/skeleton-app/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md
docs/adr/: README.md
docs/architecture/: README.md  mini-game.md  overview.md  physics-engine.md
docs/domain/: README.md  overview.md
skeleton-app/: .eslintignore  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
skeleton-app/src/: app.html  app.postcss  extension.d.ts
(+2490 files in other folders)
