[project]
name = "fast-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poe]
executor = {type = "virtualenv", location = ".venv"}

[tool.poe.tasks]
ruff-format = "ruff format ."
ruff-check = "ruff check ."
ruff-fix = "ruff check . --fix"
mypy = "mypy ."

test = "pytest tests/"
test-coverage = {shell = "pytest tests/ --cov=src --cov-branch --cov-report=term-missing --junitxml=pytest.xml | tee pytest-coverage.txt"}
lint = ["ruff-format", "ruff-check", "mypy"]
fix = ["ruff-format", "ruff-fix"]
